CB-26141 Extend image selection logic with architecture
Add architecture param to cluster definitions (x86_64 when not defined). Add architecture param to image request.
Additional improvements:
 - Unified image selection logic in ImageCatalogService
 - Added a builder class for ImageFilter